font-awesome追加・アイコン使用
font-awesomeを使用可能にするためにhead部分にlinkを追加
Headerに表示している名前の下にFacebookとGitHubのURLとアイコンを追加

--- a/css/text.css
+++ b/css/text.css
@@ -61,15 +61,15 @@ section {
     font-weight: normal;
 }
 
-.works > ul > h1 {
+.works > div > h1 {
     font-weight: normal;
 }
 
-.works > ul > h2 {
+.works > div > h2 {
     font-weight: normal;
 }
 
-.works > ul > .appIcon img {
+.works > div > .appIcon img {
     border-radius: 13%;
 }
 
