アイコンの配色
Header部分に表示しているFacebookとGitHubのアイコンの色をそれぞれ青色と黒色に変更

--- a/css/text.css
+++ b/css/text.css
@@ -10,6 +10,14 @@ header {
 
 }
 
+.fa-facebook-square {
+    color: blue;
+}
+
+.fa-github-square {
+    color: black;
+}
+
 .container {
     background-color: darkgrey;
     width: 470px;
